[package]
name = "rpg_battle"
version = "0.1.0"
authors = ["Daniel Howlett <dan@dancras.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ezing = "0.2"
ggez = "0.5"
nalgebra = "0.18"
patchwork = "0.1.0"
rand = "0.7"
tiled-json-rs = "0.2"

[patch.crates-io]
ggez = { path="../ggez" }
